<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="de.hotmann.edgar.wareneingang.Eingang.WareneingangPaletten">


    <Button android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_toLeftOf="@+id/scan_button"
        android:text="@string/clear"
        android:onClick="clearNow" />
    <Button android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:text="@string/scan"
        android:onClick="scanNow" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:text="@string/button_add_product"
        android:layout_toRightOf="@id/scan_button"
        android:id="@+id/button_add_product" />


    <LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Eingang.WareneingangPaletten"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/scan_button">

        <LinearLayout
            android:background="@color/ListviewColour"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">


            <EditText
                android:layout_width="0dp"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_season"
                android:inputType="number"
                android:id="@+id/editText_season"
                android:layout_weight="2" />

            <EditText
                android:layout_width="0dp"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_style"
                android:inputType="number"
                android:id="@+id/editText_style"
                android:layout_weight="5" />

            <EditText
                android:layout_width="0dp"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_quality"
                android:inputType="number"
                android:id="@+id/editText_quality"
                android:layout_weight="5" />

            <EditText
                android:layout_width="0dp"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_colour"
                android:inputType="number"
                android:id="@+id/editText_colour"
                android:layout_weight="3" />

            <EditText
                android:layout_width="0dp"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_size"
                android:inputType="number"
                android:id="@+id/editText_size"
                android:layout_weight="3" />

            <EditText
                android:layout_width="0dp"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:layout_height="wrap_content"
                android:hint="@string/editText_hint_quantity"
                android:inputType="number"
                android:id="@+id/editText_quantity"
                android:layout_weight="3" />





        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="0dp"
            android:id="@+id/rellayoutoptions"
            android:background="@color/ListviewColour">



            <TextView
                android:id="@+id/palettefuelle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_margin="10dp"
                android:text="00/24"/>
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="New ToggleButton"
                android:layout_centerHorizontal="true"
                android:id="@+id/secondarychoicecheckbox"
                android:textOff="1. Wahl"
                android:textOn="2. Wahl" />
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text=""
                android:layout_toRightOf="@id/secondarychoicecheckbox"
                android:id="@+id/countcheckbox"
                android:textOn="Zählen"
                android:textOff="Warten"
                android:checked="true"/>


        </RelativeLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:transcriptMode="alwaysScroll"
            android:stackFromBottom="true"
            android:id="@+id/listview_eingaenge"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/palletrowheight"
            android:orientation="horizontal"
            android:background="@color/ListviewColour">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:text="@string/prevpallet"
                android:id="@+id/prevpallet"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_width="0dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:id="@+id/editText_palette"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:text="Nummer"
                android:textAlignment="center" />
            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:text="@string/nextpallet"
                android:id="@+id/nextpallet"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="nextpallet" />/>
        </LinearLayout>

        </LinearLayout>

</RelativeLayout>
