<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_palette"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:id="@+id/editText_new_palette" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_season"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_season" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_style"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_style" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_quality"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_quality" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_colour"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_colour" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_size"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_size" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_quantity"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="3"
            android:id="@+id/editText_new_quantity" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_secondarychoice"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="New ToggleButton"
            android:id="@+id/checkbox_newSecondarychoice"
            android:layout_weight="2.25"
            android:textOff="1. Wahl"
            android:textOn="2. Wahl" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10sp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title_zählen"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_marginRight="5sp"
            android:layout_marginEnd="5sp" />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="New ToggleButton"
            android:id="@+id/checkbox_newCountornot"
            android:layout_weight="2.25"
            android:textOff="Nicht zählen"
            android:textOn="Mitzählen" />
    </LinearLayout>



</LinearLayout>