<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_locations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.hotmann.edgar.wareneingang.Lagerorte.LocationsActivity"
    tools:showIn="@layout/app_bar_locations"
    android:background="@color/ListviewColour">

    <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/halle"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="80dp" />
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_halle"
                    android:textColor="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ebenenorte"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="80dp"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_ebene"
                    android:textColor="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reihenorte"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="80dp"/>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_reihe"
                    android:textColor="@color/colorAccent"
                    android:backgroundTint="@color/colorAccent"/>
            </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/season"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="80dp"
                tools:ignore="SpUsage" />
            <EditText
                android:id="@+id/editTextOrtSeason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Season"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/zxing_custom_possible_result_points"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/style"
                android:textSize="20dp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="80dp" />
            <EditText
                android:id="@+id/editTextOrtStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Style"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/zxing_custom_possible_result_points"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quality"
                android:textSize="20dp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="80dp" />
            <EditText
                android:id="@+id/editTextOrtQualität"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Qualität"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/zxing_custom_possible_result_points"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colour"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp" />
            <EditText
                android:id="@+id/editTextOrtColour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/colour"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/zxing_custom_possible_result_points"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="20sp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp" />
            <EditText
                android:id="@+id/editTextOrtSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:layout_gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/zxing_custom_possible_result_points"
                tools:ignore="TextFields" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
